--- a/configuration.properties
+++ b/configuration.properties
@@ -1,2 +1,10 @@
 etsyUrl=https://etsy.com
 wikipediaUrl=https://www.wikipedia.org
+oracleUrl = jdbc:oracle:thin:@ec2-18-220-39-83.us-east-2.compute.amazonaws.com:1521:xe
+oracleUsername = hr
+oraclePassword= hr
+dbType = Oracle
+browser=androidweb
+emulator=yes
+apk_file_path=/Users/Azika/Documents/Cybertek apk/eBay Buy and Sell Get Online Shopping Deals_v5.35.0.13_apkpure.com.apk
+
